# clipboard_rs

./: Cargo.toml  LICENSE  LICENSE_APACHE.md  README.md
src/: dummy_clipboard.rs  lib.rs  mac_clipboard.rs  unix_clipboard.rs  windows_clipboard.rs
